tests/lang/compile_fail/type_mismatch.expo
fn add(a: Int, b: Int) -> Int
  a + b
end

fn main
  add("hello", "world")
end
